infra-config/apps/lobiani/production/shopping-env.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: lobiani
  name: lobiani-shopping
spec:
  template:
    spec:
      containers:
        - name: lobiani-shopping
