infra-config/apps/lobiani/production/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  namespace: lobiani
  name: lobiani-app
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - lobiani.baybay.dev
      secretName: lobiani-tls
  rules:
    - host: lobiani.baybay.dev
      http:
        paths:
          - pathType: Prefix
            path: /api
            backend:
              serviceName: lobiani-app-backend
              servicePort: 8080
          - pathType: Prefix
            path: /
            backend:
              serviceName: lobiani-admin
              servicePort: 80
